enterprise-chaos-hub/faults/kubernetes/disk-fill/k8s-fault.yaml
---
apiVersion: litmuschaos.io/v1alpha1
kind: K8sFault
metadata:
  name: disk-fill
spec:
  definition:
    targets:
      appinfo:
        applabel: ""
        appkind: ""
        appns: ""
    chaos:
      experiment: disk-fill
      serviceAccountName: litmus-admin
      image: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0
      imagePullPolicy: Always
      env:
        - name: TOTAL_CHAOS_DURATION
          value: "60" # in seconds

        - name: FILL_PERCENTAGE
          value: "80"

        # provide the data block size
        # supported unit is KB
        - name: DATA_BLOCK_SIZE
          value: "256"

        - name: EPHEMERAL_STORAGE_MEBIBYTES
          value: ""

        ## Percentage of total pods to target
        - name: POD_AFFECTED_PERCENTAGE
          value: ""

        ## provide the cluster runtime
        - name: CONTAINER_RUNTIME
          value: "containerd"

        # provide the socket file path
        - name: SOCKET_PATH
          value: "/run/containerd/containerd.sock"

        - name: LIB_IMAGE
          value: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0

        ## Period to wait before and after injection of chaos in sec
        - name: RAMP_TIME
          value: ""

        - name: TARGET_CONTAINER
          value: ""

        - name: TARGET_PODS
          value: ""

        # To select pods on specific node(s)
        - name: NODE_LABEL
          value: ""

        ## it defines the sequence of chaos execution for multiple target pods
        ## supported values: serial, parallel
        - name: SEQUENCE
          value: "parallel"
